<resources>
    <string name="app_name">MaizeLeaf</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="masuk">Masuk</string>
    <string name="History">History</string>
    <string name="Chat">Chat</string>
    <string name="Artikel">Artikel</string>
    <string name="title_welcome_page">Selamat datang di Maize Leaf!</string>
    <string name="message_welcome_page">Temukan solusi terbaik untuk melindungi tanaman jagung Anda dari penyakit daun. Dengan Maize Leaf, hasil panen optimal kini dalam genggaman Anda!</string>
    <string name="title_welcome_page1">Selamat Datang, Petani Cerdas!</string>
    <string name="message_welcome_page1">Maize Leaf hadir untuk membantu Anda mengenali dan mengatasi penyakit pada daun tanaman jagung. Dukung produktivitas Anda dengan teknologi cerdas!</string>
    <string name="title_welcome_page2">Mari Mulai Bersama Maize Leaf!</string>
    <string name="message_welcome_page2">Tekan tombol di bawah untuk memulai analisis daun jagung Anda. Bersama Maize Leaf, langkah Anda hari ini menentukan panen yang lebih baik esok hari!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_granted">Permintaan izin disetujui</string>
    <string name="permission_not_granted">Permintaan izin ditolak</string>
    <string name="error_capturing">Error capturing image: %1$s</string>
    <string name="choose_again">Pilih Ulang</string>
    <string name="retake">Ambil Ulang</string>
    <string name="image_classifier_failed">Klasifikasi gambar gagal</string>
    <string name="error_message">Terjadi kesalahan: %s</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="login">login</string>
    <string name="deskripsi_gambar">Deskripsi Gambar</string>
    <string name="tulis_deskripsi_gambar">Tulis deskripsi gambar...</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="register">register</string>
    <string name="nama">Nama</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="tidak_terdeteksi">Gambar Daun Jagung Tidak Terdeteksi</string>
    <string name="unggah_gambar_baru">Unggah Gambar Baru</string>
    <string name="analisis_ulang">Silahkan unggah gambar baru untuk analisis ulang</string>
    <string name="delete_alert">Hapus Riwayat</string>
    <string name="are_you_sure_delete">Apakah Anda yakin ingin menghapus riwayat ini?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="kembali">Kembali</string>
    <string name="back">back</string>
    <string name="simpan">Simpan</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="jadwal_posting">jadwal posting</string>
    <string name="_0_komentar">0 komentar</string>
    <string name="komentar">komentar</string>
    <string name="gambar">gambar</string>
    <string name="judul">judul</string>
    <string name="referensi">referensi</string>
    <string name="Referensi">Referensi</string>
    <string name="isi_referensi">isi referensi</string>
    <string name="hapus_posting">hapus posting</string>
</resources>